Changelog
=========

Unreleased
~~~~~~~~~~~~~~~~~~

 * Update testing to include Python version 3.11 and Wagtail versions 4.1 and 4.2 (Katherine Domingo)

0.4.0 (01.02.2023)
~~~~~~~~~~~~~~~~~~

 * Add support for Wagtail 4.0 (Katherine Domingo)
 * Fix to allow local development without Poetry (Brady Moe)
 * Remove Python 3.6 support (Brady Moe)