@@ -8,67 +8,9 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python: ['3.8', '3.9', '3.10']
-        django: ['3.2', '4.0']
-        wagtail: ['2.16', '3.0', '4.0', '4.1', '4.2']
-        include:
-          - python: '3.7'
-            django: '3.2'
-            wagtail: '2.15'
-          - python: '3.8'
-            django: '3.2'
-            wagtail: '2.15'
-          - python: '3.9'
-            django: '3.2'
-            wagtail: '2.15'
-          - python: '3.10'
-            django: '3.2'
-            wagtail: '2.15'
-          - python: '3.8'
-            django: '4.1'
-            wagtail: '4.0'
-          - python: '3.9'
-            django: '4.1'
-            wagtail: '4.0'
-          - python: '3.10'
-            django: '4.1'
-            wagtail: '4.0'
-          - python: '3.8'
-            django: '4.1'
-            wagtail: '4.1'
-          - python: '3.9'
-            django: '4.1'
-            wagtail: '4.1'
-          - python: '3.10'
-            django: '4.1'
-            wagtail: '4.1'
-          - python: '3.8'
-            django: '4.1'
-            wagtail: '4.2'
-          - python: '3.9'
-            django: '4.1'
-            wagtail: '4.2'
-          - python: '3.10'
-            django: '4.1'
-            wagtail: '4.2'
-          - python: '3.11'
-            django: '3.2'
-            wagtail: '4.1'
-          - python: '3.11'
-            django: '3.2'
-            wagtail: '4.2'
-          - python: '3.11'
-            django: '4.0'
-            wagtail: '4.1'
-          - python: '3.11'
-            django: '4.0'
-            wagtail: '4.2'
-          - python: '3.11'
-            django: '4.1'
-            wagtail: '4.1'
-          - python: '3.11'
-            django: '4.1'
-            wagtail: '4.2'
+        python: ['3.8', '3.9', '3.10', '3.11']
+        django: ['3.2', '4.0', '4.1']
+        wagtail: ['4.1', '4.2']
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python }}
