@@ -1,11 +1,6 @@
 from django.db import models
 from django.utils import timezone
-from wagtail import VERSION as WAGTAIL_VERSION
-
-if WAGTAIL_VERSION >= (3, 0):
-    from wagtail.models import Page
-else:
-    from wagtail.core.models import Page
+from wagtail.models import Page
 
 from wagtail_airtable.mixins import AirtableMixin
 
