@@ -34,7 +34,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.7,<4.0"
-wagtail = ">=2.15"
+wagtail = ">=4.1"
 airtable-python-wrapper = "~0.13.0"
 djangorestframework = ">=3.11.0"
 django = ">=3.2"
