@@ -1,13 +1,8 @@
 # Generated by Django 3.0.6 on 2020-05-14 19:00
 
 import django.db.models.deletion
+import wagtail.fields as wagtail_fields
 from django.db import migrations, models
-from wagtail import VERSION as WAGTAIL_VERSION
-
-if WAGTAIL_VERSION >= (3, 0):
-    import wagtail.fields as wagtail_fields
-else:
-    import wagtail.core.fields as wagtail_fields
 
 
 class Migration(migrations.Migration):
