@@ -1,13 +1,6 @@
 from django.db import models
-from wagtail import VERSION as WAGTAIL_VERSION
-
-if WAGTAIL_VERSION >= (3, 0):
-    from wagtail.fields import RichTextField
-    from wagtail.models import Page
-else:
-    from wagtail.core.fields import RichTextField
-    from wagtail.core.models import Page
-
+from wagtail.fields import RichTextField
+from wagtail.models import Page
 from wagtail.snippets.models import register_snippet
 
 from wagtail_airtable.mixins import AirtableMixin
