@@ -1,9 +1,7 @@
 [tox]
 envlist =
-    python{3.7,3.8,3.9,3.10}-django{3.2}-wagtail{2.15,2.16,3.0,4.0,4.1,4.2}
-    python{3.8,3.9,3.10}-django{4.0}-wagtail{2.16,3.0,4.0,4.1,4.2}
-    python{3.8,3.9,3.10}-django{4.1}-wagtail{4.0,4.1,4.2}
-    python{3.11}-django{3.2,4.0,4.1}-wagtail{4.1,4.2}
+    python{3.7}-django{3.2}-wagtail-{4.1,4.2}
+    python{3.8,3.9,3.10,3.11}-django{3.2,4.0,4.1}-wagtail-{4.1,4.2}
 
 [testenv]
 commands = python runtests.py
@@ -19,9 +17,5 @@ deps =
     django3.2: Django>=3.2,<4.0
     django4.0: Django>=4.0,<4.1
     django4.1: Django>=4.1,<4.2
-    wagtail2.15: wagtail>=2.15,<2.16  # LTS
-    wagtail2.16: wagtail>=2.16,<2.17
-    wagtail3.0: wagtail>=3.0,<3.1
-    wagtail4.0: wagtail>=4.0,<4.1
     wagtail4.1: wagtail>=4.1,<4.2   # LTS
     wagtail4.2: wagtail>=4.2rc1,<4.3
