@@ -1,12 +1,6 @@
 from django.conf import settings
 from django.urls import path, reverse
-from wagtail import VERSION as WAGTAIL_VERSION
-
-if WAGTAIL_VERSION >= (3, 0):
-    from wagtail import hooks
-else:
-    from wagtail.core import hooks
-
+from wagtail import hooks
 from wagtail.admin.menu import MenuItem
 
 from wagtail_airtable.utils import airtable_message, can_send_airtable_messages
